changed src/index.html and src/styles.css (corrected styles for 3 inputs and 3 buttons, buttons also separated from inputs now)

--- a/src/index.html
+++ b/src/index.html
@@ -17,9 +17,12 @@
       <input type="text" id="vacancy" placeholder="Vacancy" required />
       <input type="tel" id="phone" placeholder="Phone" required />
 
-      <button type="submit" id="add-btn">ADD</button>
-      <button type="button" id="clear-btn">Clear List</button>
-      <button type="button" id="search-btn">Search</button>
+      <div class="form-buttons">
+        <button type="submit" id="add-btn">ADD</button>
+        <button type="button" id="clear-btn">Clear List</button>
+        <button type="button" id="search-btn">Search</button>
+      </div>
+
     </form>
   </main>
 </body>
