--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,40 @@
       </div>
 
     </form>
+    <div class="alphabet-list">
+      <div class="column">
+        <!-- A-M -->
+        <div class="letter-block" data-letter="A">A</div>
+        <div class="letter-block" data-letter="B">B</div>
+        <div class="letter-block" data-letter="C">C</div>
+        <div class="letter-block" data-letter="D">D</div>
+        <div class="letter-block" data-letter="E">E</div>
+        <div class="letter-block" data-letter="F">F</div>
+        <div class="letter-block" data-letter="G">G</div>
+        <div class="letter-block" data-letter="H">H</div>
+        <div class="letter-block" data-letter="I">I</div>
+        <div class="letter-block" data-letter="J">J</div>
+        <div class="letter-block" data-letter="K">K</div>
+        <div class="letter-block" data-letter="L">L</div>
+        <div class="letter-block" data-letter="M">M</div>
+      </div>
+      <div class="column">
+        <!-- N-Z -->
+        <div class="letter-block" data-letter="N">N</div>
+        <div class="letter-block" data-letter="O">O</div>
+        <div class="letter-block" data-letter="P">P</div>
+        <div class="letter-block" data-letter="Q">Q</div>
+        <div class="letter-block" data-letter="R">R</div>
+        <div class="letter-block" data-letter="S">S</div>
+        <div class="letter-block" data-letter="T">T</div>
+        <div class="letter-block" data-letter="U">U</div>
+        <div class="letter-block" data-letter="V">V</div>
+        <div class="letter-block" data-letter="W">W</div>
+        <div class="letter-block" data-letter="X">X</div>
+        <div class="letter-block" data-letter="Y">Y</div>
+        <div class="letter-block" data-letter="Z">Z</div>
+      </div>
+    </div>
   </main>
 </body>
 </html>
