--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <form id="contact-form" class="form">
       <input type="text" id="name" placeholder="Name" required />
       <input type="text" id="vacancy" placeholder="Vacancy" required />
-      <input type="tel" id="phone" placeholder="Phone" required />
+      <input type="tel" id="phone" placeholder="Phone" pattern="\+\d\s\d{3}\s\d{3}\s\d{2}\s\d{2}" required />
 
       <div class="form-buttons">
         <button type="submit" id="add-btn">ADD</button>
