--- a/src/index.html
+++ b/src/index.html
@@ -58,6 +58,15 @@
         <div class="letter-block" data-letter="Z">Z</div>
       </div>
     </div>
+
+    <div id="search-modal" class="modal hidden">
+      <div class="modal-content">
+        <span class="close-modal">&times;</span>
+        <h2>Search Contacts</h2>
+        <input type="text" id="search-input" placeholder="Enter name or phone">
+        <div id="search-results"></div>
+      </div>
+    </div>
   </main>
 </body>
 </html>
