--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,14 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Contact List</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <main class="container">
-    <h1>Contact List</h1>
+    <h1>
+      <i class="fas fa-address-book"></i> Contact List
+    </h1>
 
     <form id="contact-form" class="form">
       <input type="text" id="name" placeholder="Name" required />
@@ -18,9 +21,15 @@
       <input type="tel" id="phone" placeholder="Phone +7XXXXXXXXXX" required />
 
       <div class="form-buttons">
-        <button type="submit" id="add-btn">ADD</button>
-        <button type="button" id="clear-btn">Clear List</button>
-        <button type="button" id="search-btn">Search</button>
+        <button type="submit" id="add-btn">
+          <i class="fas fa-plus"></i> ADD
+        </button>
+        <button type="button" id="clear-btn">
+          <i class="fas fa-trash"></i> Clear List
+        </button>
+        <button type="button" id="search-btn">
+          <i class="fas fa-search"></i> Search
+        </button>
       </div>
     </form>
 
@@ -61,7 +70,9 @@
   </main>
     <div id="search-modal" class="modal hidden">
       <div class="modal-content">
-        <span class="close-modal">&times;</span>
+        <span class="close-modal">
+          <i class="fas fa-times"></i>
+        </span>
         <h2>Search Contacts</h2>
         <input type="text" id="search-input" placeholder="Enter name or phone">
         <div id="search-results"></div>
