changed src/index.html (to add the functionality of displaying contacts when clicking on a letter > added markup for modal window)

--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,7 @@
       </div>
     </div>
   </main>
-  <!-- модальное окно для кнопки поиска Search -->
+    <!-- модальное окно для кнопки поиска Search -->
     <div id="search-modal" class="modal hidden">
       <div class="modal-content">
         <span class="close-modal">
@@ -78,5 +78,15 @@
         <div id="search-results"></div>
       </div>
     </div>
+    <!-- модальное окно для вывода контактов при клике на букву -->
+  <div id="letter-contacts-modal" class="modal hidden">
+    <div class="modal-content">
+        <span class="close-letter-modal">
+          <i class="fas fa-times"></i>
+        </span>
+      <h2 id="letter-modal-title">Contacts</h2>
+      <div id="letter-contacts-container"></div>
+    </div>
+  </div>
 </body>
 </html>
